tests/resources/invalid/multipleExceptions.ebnf
p =char - 'a' - `b` - "c";

